--- a/index.css
+++ b/index.css
@@ -277,10 +277,11 @@ body {
 /* self added */
 .card img {
   object-fit: cover;
+  opacity: 1;
 }
 
 .card-text {
-  background: rgba(256, 256, 256, 0.3);
+  background: rgba(256, 256, 256, 0.5);
 }
 
 #inline-text {
@@ -305,10 +306,62 @@ body {
 
   &:hover,
   &:focus {
-    transform: scale3d(1.01, 1.01, 1);
+    transform: scale3d(1.03, 1.03, 1);
 
     &::after {
       opacity: 0.1;
     }
   }
+}
+
+/* Global values */
+.deleteTag {
+  transition: transform .5s;
+
+  &::after {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transition: opacity 2s cubic-bezier(.165, .84, .44, 1);
+    box-shadow: 0 8px 17px 0 rgba(0, 0, 0, .2), 0 6px 20px 0 rgba(0, 0, 0, .15);
+    content: '';
+    opacity: 0;
+    z-index: -1;
+  }
+
+  &:hover,
+  &:focus {
+    transform: scale3d(1.03, 1.03, 1);
+
+    &::after {
+      opacity: 0.1;
+    }
+  }
+}
+
+.textInput {
+  padding: 2px 5px;
+  margin: 3px;
+  min-width: 20%;
+}
+
+.selectedComponent {
+  font-weight: bold;
+  opacity: 1;
+  transform: scale3d(1.07, 1.07, 1);
+  box-shadow: 2px 2px;
+}
+
+.selectedTag {
+  font-weight: bold;
+  opacity: 1;
+  /* transform: scale3d(1.07, 1.07, 1); */
+  box-shadow: 2px 2px;
+  border-width: 3px 0;
+}
+
+.wholeText {
+  display: inline-block;
 }
