--- a/promptEngine/templates/index/index.html
+++ b/promptEngine/templates/index/index.html
@@ -1,4 +1,5 @@
 <!-- where to find components: https://getbootstrap.com/docs/5.3/examples/ -->
+{% load static %}
 <!doctype html>
 <html lang="en" data-bs-theme="auto">
 
@@ -11,8 +12,7 @@
   <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
   <meta name="generator" content="Hugo 0.112.5">
   <title>Prompt Engineering</title>
-  <link href="./index.css" rel="stylesheet">
-  {% load static %}
+  <link href="{% static 'promptEngine/index.css' %}" rel="stylesheet">
   <link href="{% static 'promptEngine/bootstrap-5.3.0/dist/css/bootstrap.min.css' %}" rel="stylesheet">
   <script src="{% static 'promptEngine/index.js' %}?v={% now 'U' %}" type="text/javascript"></script>
 
@@ -223,10 +223,9 @@
 
   </div>
 
+  <!-- <script src="./bootstrap-5.3.0/dist/js/bootstrap.bundle.min.js"></script> -->
 
-  <script src="./bootstrap-5.3.0/dist/js/bootstrap.bundle.min.js">
-
-  </script>
+  <script src="{% static 'promptEngine/bootstrap-5.3.0/dist/js/bootstrap.bundle.min.js' %}" type="text/javascript"></script>
 
 
 </body>
