start developing control group

--- a/promptEngine/templates/index/index.html
+++ b/promptEngine/templates/index/index.html
@@ -117,6 +117,9 @@
 
   <div class="container-fluid px-5" id="timer">
     <div class=" d-lg-flex col-sm py-3 justify-content-center">
+      <div class="py-2">
+        <p class="font-weight-bold">Time: 00:00:00 &nbsp&nbsp </p>
+      </div>
       <a href="#">
         <button class="btn btn-secondary btn-bg" onclick="confirmFinish()"> Finish Task </button>
       </a>
