--- a/promptEngine/templates/index/index.html
+++ b/promptEngine/templates/index/index.html
@@ -102,14 +102,9 @@
           <a href="#" class="d-flex align-items-center mb-2 mb-lg-0 link-body-emphasis text-decoration-none">
             <img class="me-3" height="30" src="{% static 'promptEngine/img/logo.png' %}" alt="logo">
           </a>
-
           <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
             <li class="nav-link px-3 link-secondary">Text-to-image Generation</li>
-            <!-- <li><a href="#" class="nav-link px-3 link-secondary">Collection</a></li> -->
           </ul>
-
-
-
         </div>
       </div>
     </header>
@@ -124,123 +119,62 @@
         <button class="btn btn-secondary btn-bg" onclick="confirmFinish()"> Finish Task </button>
       </a>
     </div>
-
   </div>
 
-  <!-- flex-column -->
+  <div class="container-fluid p-0 px-5 py-0" id="SampleText">
+    <div class="d-lg-flex col-sm justify-content-left mx-2">
+        <div>
+            <p><strong> Sample prompts: </strong>
+            <p>
+            <div>
+                &nbsp&nbsp A flower-patterned mug in cream gloss ceramic
+                with handle in wood, 3d rendering style.
+            </div>
+            <div>
+                &nbsp&nbsp A backpack for travellers in grey canvas with straps
+                in white padded mesh, cinematic style.
+            </div>
+        </div>
+    </div>
+</div>
+
   <div class="container-fluid p-0 my-2 py-4 px-5">
-
     <nav class="navbar navbar-expand-lg bg-body-tertiary rounded">
-      <div class="container-fluid " id="inputContainer">
-
-        <div class="nav-item dropdown mx-2">
-          <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Product</a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" onclick="removeAll(); addInput('A watch'); addTag() 
-                addInput('straps'); addTag(); addStyle();">
-                Watch</a>
-            </li>
-            <li><a class="dropdown-item" onclick="removeAll(), createUl('An office chair'),
-                createUl('back'),createUl('legs'),addStyle()">
-                Office Chair</a>
-            <li><a class="dropdown-item" onclick="removeAll(), createUl('An electronic toothbrush'), 
-                createUl('handle'),addStyle()">
-                Electronic Toothbrush</a>
-            <li><a class="dropdown-item" onclick="removeAll(),createUl('A backpack'),
-              createUl('straps'),addStyle()">
-                Backpack</a>
-              <div class="dropdown-divider"></div>
-            <li><a class="dropdown-item" onclick="removeAll()">Clear</a>
-            </li>
-          </ul>
+        <div class="container-fluid" id="inputContainer">
+            <div class="collapse navbar-collapse flex-column align-content-left mx-2">
+                <input style="width: 100%" id="control_group_input">
+            </div>
+            <div class=" d-lg-flex col-sm-auto justify-content-lg-end" id="generateButton">
+                <a href="#">
+                    <button class="btn btn-secondary btn-sm" onclick="generate()"> Generate </button>
+                </a>
+            </div>
         </div>
-
-        <!-- flex-column: have several row effect -->
-
-        <div class="collapse navbar-collapse flex-column align-content-start" id="navbarCollapse">
-
-          <ul class="navbar-nav" id="tagList0">
-          </ul>
-          <ul class="navbar-nav" id="tagList1">
-          </ul>
-          <ul class="navbar-nav" id="tagList2">
-          </ul>
-          <ul class="navbar-nav" id="tagList3">
-          </ul>
-          <ul class="navbar-nav" id="tagList4">
-          </ul>
-          <ul class="navbar-nav" id="tagList5">
-          </ul>
-          <ul class="navbar-nav" id="tagList6">
-          </ul>
-          <ul class="navbar-nav" id="tagList7">
-          </ul>
-          <ul class="navbar-nav" id="tagList8">
-          </ul>
-          <ul class="navbar-nav" id="tagList9">
-          </ul>
-          <ul class="navbar-nav" id="tagList10">
-          </ul>
-
-        </div>
-
-        <div class="nav-item dropdown mx-2">
-          <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Customize</a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" onclick="createUl('element name')">Add Component</a></li>
-            <!-- <li><a class="dropdown-item" onclick="addInput('')">Add Input Box</a></li> -->
-            <li><a class="dropdown-item" onclick="addStyle()"> Add Image Style</a></li>
-          </ul>
-        </div>
-
-        <div class=" d-lg-flex col-sm-auto justify-content-lg-end" id="generateButton">
-          <input id="id_prompt_input_text" type="text" name="prompt_input" hidden />
-          <button class="btn btn-secondary btn-sm" onclick="generate()"> Generate </button>
-        </div>
-
-      </div>
     </nav>
-
-
-
-    <div class="container-fluid mb-3">
-      <id="inline-text">
-        <span class="text-muted" id="inline-text"> Suggested prompt: &nbsp
-        </span>
-        <span class="font-weight-bold" id="promptText"></span>
-        <span class="font-weight-bold" id="colorText"></span>
-        <span class="font-weight-bold" id="finishText"></span>
-        <span class="font-weight-bold" id="materialText"></span>
-        <span class="font-weight-bold" id="renderText"></span>
-        <span class="font-weight-bold" id="fullText"></span>
-    </div>
-
-    <div class="row container mx-2" id="materialStuff">
-    </div>
-    <div class="row container mx-2" id="finishStuff">
-    </div>
-    <div class="row container mx-2" id="colorStuff">
-    </div>
-    <div class="row container mx-2" id="renderStuff">
-    </div>
-
   </div>
 
-  <!-- <script src="./bootstrap-5.3.0/dist/js/bootstrap.bundle.min.js"></script> -->
+  <div hidden id="id_prompt_input_text">
+  </div>
+  <div class="row container mx-2" id="renderStuff">
+  </div>
 
   <script src="{% static 'promptEngine/bootstrap-5.3.0/dist/js/bootstrap.bundle.min.js' %}" type="text/javascript"></script>
+  <script>
+    update_id = "id_prompt_input_text"
+    input_id = "control_group_input"
+    input = document.getElementById(input_id)
+    update = document.getElementById(update_id)
+    const inputHandler = function(e) {
+      update.innerHTML = input.value
+    }
+    input.addEventListener('input', inputHandler)
+  </script>
   <script>
     const addItemURL = "{% url 'ajax-generate' %}"
 
     function updateList(items) {
-      ms = document.getElementById("materialStuff");
-      fi = document.getElementById("finishStuff")
-      co = document.getElementById("colorStuff")
       re = document.getElementById("renderStuff")
-      fi.innerHTML = ""
-      co.innerHTML = ""
       re.innerHTML = ""
-      ms.innerHTML = ""
 
       str = `<div class="row container mx-2" id = "displayImg">`
       for (let i = 0; i < items.length; i++) {
