--- a/promptEngine/templates/index/index.html
+++ b/promptEngine/templates/index/index.html
@@ -112,8 +112,8 @@
 
   <div class="container-fluid px-5" id="timer">
     <div class=" d-lg-flex col-sm py-3 justify-content-center">
-      <div class="py-2">
-        <p class="font-weight-bold">Time: 00:00:00 &nbsp&nbsp </p>
+      <div class="py-2 mx-4">
+        <p id="id_time" class="font-weight-bold">Time: 0:0:0 &nbsp&nbsp </p>
       </div>
       <a href="#">
         <button class="btn btn-secondary btn-bg" onclick="confirmFinish()"> Finish Task </button>
@@ -160,6 +160,18 @@
   </div>
 
   <script src="{% static 'promptEngine/bootstrap-5.3.0/dist/js/bootstrap.bundle.min.js' %}" type="text/javascript"></script>
+  <script>
+  var timer = 0
+  function add1Sec() {
+    timer += 1
+    h = Math.floor(timer / 3600)
+    m = Math.floor(timer / 60)
+    s = timer % 60
+    clock = document.getElementById('id_time')
+    clock.innerHTML = `Time: ${h}:${m}:${s}`
+  }
+  setInterval(add1Sec, 1000)
+  </script>
   <script>
     update_id = "id_prompt_input_text"
     input_id = "control_group_input"
