--- a/promptEngine/templates/index/index.html
+++ b/promptEngine/templates/index/index.html
@@ -231,7 +231,9 @@
 
         <div class=" d-lg-flex col-sm-auto justify-content-lg-end" id="generateButton">
           <input id="id_prompt_input_text" type="text" name="prompt_input" hidden />
-          <button class="btn btn-secondary btn-sm" onclick="generate()"> Generate </button>
+          <button class="btn btn-secondary btn-sm" onclick="generate()" id='id_button'> 
+            Generate 
+          </button>
         </div>
 
       </div>
