--- a/promptEngine/templates/index/index.html
+++ b/promptEngine/templates/index/index.html
@@ -269,6 +269,7 @@
   <script src="{% static 'promptEngine/bootstrap-5.3.0/dist/js/bootstrap.bundle.min.js' %}" type="text/javascript"></script>
   <script>
     const addItemURL = "{% url 'ajax-generate' %}"
+    const saveURL = "{% url 'save' %}"
 
     function updateList(items) {
       ms = document.getElementById("materialStuff");
@@ -310,6 +311,13 @@
       clock.innerHTML = `Time: ${h}:${m}:${s}`
     }
     setInterval(add1Sec, 1000)
+
+    function getRandomInt(max) {
+      return Math.floor(Math.random() * max);
+    }
+
+    id_to_save = getRandomInt(100000)
+    alert("Please copy the date below as your id:\n" + id_to_save)
   </script>
 </body>
 
